--- a/conda_env.yaml
+++ b/conda_env.yaml
@@ -19,11 +19,27 @@ dependencies:
   - aniso8601==1.2.1
   - certifi==2017.7.27.1
   - chardet==3.0.4
+  - colorama==0.3.9
+  - decorator==4.1.2
   - flask-restful==0.3.6
   - idna==2.6
+  - ipykernel==4.6.1
+  - ipython==6.1.0
+  - ipython-genutils==0.2.0
+  - jedi==0.10.2
+  - jupyter-client==5.1.0
+  - jupyter-core==4.3.0
+  - pickleshare==0.7.4
+  - prompt-toolkit==1.0.15
+  - pygments==2.2.0
   - python-dateutil==2.6.1
   - pytz==2017.2
+  - pyzmq==16.0.2
   - requests==2.18.4
+  - simplegeneric==0.8.1
+  - tornado==4.5.2
+  - traitlets==4.3.2
   - urllib3==1.22
+  - wcwidth==0.1.7
 prefix: C:\Users\pierr\Anaconda3\envs\object-over-api
 
